[package]
name = "sevctl"
version = "0.2.0"
authors = ["The Enarx Project Developers"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/virtee/sevctl"
repository = "https://github.com/virtee/sevctl"
description = "Administrative utility for AMD SEV"
readme = "README.md"
keywords = ["amd", "sev"]
categories = ["os", "os::linux-apis", "parsing", "cryptography", "hardware-support"]
exclude = [ ".gitignore", ".github/*" ]
rust-version = "1.51"

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "virtee/sevctl", workflow = "test" }
#github = { repository = "virtee/sevctl", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "virtee/sevctl" }
is-it-maintained-open-issues = { repository = "virtee/sevctl" }

[dependencies]
sev = { git = "https://github.com/virtee/sev.git", branch = "main", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
serde-big-array = "0.4.1"
bincode = "1.3.3"
structopt = "0.3"
codicon = "3.0"
colorful = "0.2.1"
httparse = "1.7"
libc = "0.2.126"
native-tls = "0.2"
url = "2.2"
base64 = "0.13.0"
openssl = "0.10"
uuid = "1.1.1"

[dev-dependencies]
tempfile = "3.3.0"
