[package]
name = "sevctl"
version = "0.6.1"
authors = ["The Enarx/VirTEE Project Developers"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/virtee/sevctl"
repository = "https://github.com/virtee/sevctl"
description = "Administrative utility for AMD SEV"
readme = "README.md"
keywords = ["amd", "sev"]
categories = [
    "os",
    "os::linux-apis",
    "parsing",
    "cryptography",
    "hardware-support",
]
exclude = [".gitignore", ".github/*"]
rust-version = "1.80"

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "virtee/sevctl", workflow = "test" }
#github = { repository = "virtee/sevctl", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "virtee/sevctl" }
is-it-maintained-open-issues = { repository = "virtee/sevctl" }

[dependencies]
sev = { version = "5.0.0", default-features = false, features = [
    "sev",
    "openssl",
] }
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
bincode = "1.3.3"
bitfield = "0.15.0"
msru = "0.2.0"
clap = { version = "<4.5", features = ["derive"] }
codicon = "3.0"
colorful = "0.2.2"
libc = "0.2.139"
base64 = "0.13.0"
openssl = { version = "0.10", features = ["vendored"] }
uuid = "1.3.2"
anyhow = "1.0.57"
log = "0.4"
env_logger = "0.8.4"
proc-macro2 = "1.0.60"
reqwest = "0.12.4"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.5.0"
